\name{NEWS}
\title{News for Package \pkg{finbif}}

\section{finbif version 0.5.0}{
  \subsection{NEW FEATURES}{
    \itemize{
      \item Getting records from FinBIF can now be speed up (~1.5x) with
        asynchronous processing. If the \code{future} package is available and
        an asynchronous strategy (e.g., \code{plan(multisession, workers = 2)})
        is selected then downloading records and processing them will occur
        simultaneously in separate threads, often leading to a significant
        speed up over sequential processing.
      \item Occurrence records can now be requested using multiple sets of
        filters at the same time. If a list of filters (with unnamed elements)
        is supplied then a record request will be made for each set of filters
        and the results of all requests combined and all duplicate records
        removed.
      \item Occurrence records can now be read directly from FinBIF download
        request files. The function \code{finbif_occurrence_load} can load data
        from a local file or remotely using a persistent identifier URI (e.g.,
        \code{http://tun.fi/HBF.49381}).
      \item Aggregation of records can now be performed at the recording "event"
        level as well as the "record"" level.
    }
  }
}

\section{finbif version 0.4.1}{
  \subsection{NEW FEATURES}{
    \itemize{
      \item New functions \code{scientific_name} and \code{common_name} are now
        available to get scientific and common names for taxa (given a taxon
        name or FinBIF ID code) or extract names from a \code{finbif_taxa}-
        class object.
      \item Add ability to extract complex record variables such as those
        associated with record media (currently undocumented).
    }
  }
  \subsection{MINOR IMPROVEMENTS}{
    \itemize{
      \item Collection name can be selected as a variable for occurrence
        records. Previously it had to be manually translated from collection ID.